--- a/styles/style.css
+++ b/styles/style.css
@@ -1,110 +1,123 @@
 /*Shared Style Elements*/
 * {
   box-sizing: border-box;
-  font-family: "Work Sans", sans-serif;
-}
-body {
-  margin: 0;
   padding: 0;
+  margin: 0;
 }
+
 h2 {
   text-align: center;
   font-family: Work Sans;
-  font-size: 45px;
+  font-size: 3rem;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
 }
 
 /*Navigation Tab*/
-
-header {
+nav {
   background: #fff;
   box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
 }
-nav {
+.nav-container {
   display: flex;
   align-items: center;
-  padding: 0 1.25rem;
+  max-width: 1400px;
+  min-height: 130px;
   margin: 0 auto;
+  padding-inline: 1rem;
 }
-.logo {
+.logo-container {
   display: flex;
-  gap: 1.25rem;
   align-items: center;
+  width: 50%;
 }
 .logo-icon {
   width: 86.041px;
   height: 40px;
   flex-shrink: 0;
+  margin-right: 1.25rem;
 }
 .pink-letter {
-  color: #ff42a5;
+  background: linear-gradient(90deg, #ff42a5 0%, #ff42a5 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
-.links {
+.nav-links {
   display: flex;
+  width: 50%;
+  justify-content: flex-end;
   align-items: center;
-}
-.links ul {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
-}
-.links ul li {
-  list-style: none;
-}
-.links ul li a {
-  text-decoration: none;
+  gap: 1.5rem;
+  min-height: 3rem;
   color: #3c354f;
   text-align: center;
   font-family: Work Sans;
-  font-size: 1.125rem;
+  font-size: 1.25rem;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+}
+.nav-links li {
+  list-style: none;
+}
+.social-button {
+  display: flex;
+  align-items: center;
+  border-radius: 0.5rem;
+  background: rgba(11, 2, 35, 0.1);
+  padding: 0.6rem 1.5rem;
+}
+.social-button a {
+  margin-left: 1rem;
+}
+.nav-links a {
+  text-decoration: none;
+  color: #3c354f;
 }
 .tiktok-logo {
   width: 24px;
-  height: auto;
+  height: 24px;
+  flex-shrink: 0;
 }
-.links ul :nth-child(3) {
+
+/*Hero Section*/
+
+.hero-container {
   display: flex;
   align-items: center;
-  border-radius: 8px;
-  background: rgba(11, 2, 35, 0.1);
-  padding: 0.6rem 1.2rem;
-  gap: 1.5rem;
-  color: #3c354f;
+  justify-content: space-between;
+  padding-inline: 1rem;
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
+.hero-text-area {
+  position: relative;
+}
+
+.hero-text-background-image img {
+  position: absolute;
+  top: 0;
+  transform: translate(-30%, -24.5%);
+  object-fit: cover;
+  z-index: -1;
+}
+.hero-text-pre-heading {
+  text-align: left;
+  color: #0b0223;
   text-align: center;
   font-family: Work Sans;
-  font-size: 1.125rem;
+  font-size: 3rem;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
   line-height: normal;
-}
-.links ul :nth-child(3) span {
-  display: flex;
-  align-items: center;
-  gap: 0.6rem;
+  text-transform: uppercase;
 }
 
-/* Hero-Section */
-
-.hero-section {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  align-items: center;
-}
-
-.hero-text {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.hero-text h1 {
-  text-align: center;
+.hero-text-heading {
+  text-align: left;
   font-family: Work Sans;
   font-size: 6rem;
   font-style: normal;
@@ -115,19 +128,57 @@ nav {
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  margin-bottom: 1.5rem;
 }
-
-.hero-text-heading {
-  color: #0b0223;
+.bullet-points {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.points {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  color: #534c64;
   text-align: center;
   font-family: Work Sans;
-  font-size: 48px;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-transform: lowercase;
+}
+.hero-text-button {
+  display: inline-flex;
+  margin-top: 2.5rem;
+  gap: 1.5rem;
+}
+
+.button-primary {
+  display: inline-flex;
+  padding: 1.25rem 2.5rem;
+  align-items: flex-start;
+  gap: 10px;
+  border-radius: 3rem;
+  color: #fff;
+  font-family: Work Sans;
+  font-size: 1.25rem;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
   text-transform: uppercase;
+  text-decoration: none;
 }
 
-.hero-photo {
-  padding-right: 15.25rem;
+.button-color-1 {
+  background: var(--linear, linear-gradient(90deg, #ff42a5 0%, #ff42a5 100%));
+}
+.button-color-2 {
+  background: #4ec5f7;
+}
+.hero-image-section {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
