--- a/styles/style.css
+++ b/styles/style.css
@@ -163,7 +163,7 @@ nav {
   font-family: Work Sans;
   font-size: 6rem;
   font-style: normal;
-  font-weight: 800;
+  font-weight: 900;
   line-height: normal;
   text-transform: uppercase;
   background: linear-gradient(180deg, #f948b2 0%, #8758f1 100%);
@@ -174,6 +174,7 @@ nav {
 }
 .bullet-points {
   display: flex;
+  align-items: start;
   flex-direction: column;
   gap: 1rem;
 }
@@ -189,6 +190,11 @@ nav {
   font-weight: 500;
   line-height: normal;
   text-transform: lowercase;
+}
+
+.points img {
+  width: 24px;
+  height: 24px;
 }
 .hero-text-button {
   display: inline-flex;
@@ -345,4 +351,73 @@ nav {
   margin-top: 1.5rem;
   text-align: left;
   flex-shrink: 0;
+}
+
+/* Feature Section */
+
+.featured-section {
+  max-width: 1400px;
+  margin: 7.5rem auto 0;
+}
+
+.feature-1 {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 70vh;
+  margin-bottom: 7.5rem;
+}
+
+.feature-text-1 {
+  width: 60%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-right: 4rem;
+}
+.feature-image-1 {
+  width: auto;
+  height: 100%;
+}
+.feature-image-1 img {
+  width: 100%;
+  height: 100%;
+}
+.floating-image-1 {
+  position: absolute;
+  transform: translate(55%, 50%);
+}
+.feature-text-1-heading {
+  text-align: right;
+  font-family: Work Sans;
+  font-size: 3rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 60px;
+  background: linear-gradient(180deg, #f948b2 0%, #8758f1 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.feature-text-1-heading span {
+  color: #0b0223;
+  font-family: Work Sans;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 60px;
+}
+
+.feature-text-1 p {
+  color: #534c64;
+  text-align: right;
+  font-family: Work Sans;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+  max-width: 400px;
+  margin-top: 1.5rem;
 }
