--- a/styles/style.css
+++ b/styles/style.css
@@ -359,14 +359,14 @@ nav {
   max-width: 1400px;
   margin: 7.5rem auto 0;
 }
-
+/* Feature - 1 */
 .feature-1 {
   position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 70vh;
-  margin-bottom: 7.5rem;
+  margin-bottom: 15rem;
 }
 
 .feature-text-1 {
@@ -387,21 +387,21 @@ nav {
 }
 .floating-image-1 {
   position: absolute;
-  transform: translate(55%, 50%);
+  transform: translate(30%, 60%);
 }
-.feature-text-1-heading {
-  text-align: right;
+.feature-text-1-heading span {
   font-family: Work Sans;
   font-size: 3rem;
   font-style: normal;
   font-weight: 700;
   line-height: 60px;
-  background: linear-gradient(180deg, #f948b2 0%, #8758f1 100%);
+  background: linear-gradient(180deg, #f948b2 100%, #8758f1 0%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-.feature-text-1-heading span {
+.feature-text-1-heading {
+  text-align: right;
   color: #0b0223;
   font-family: Work Sans;
   font-size: 48px;
@@ -420,4 +420,63 @@ nav {
   line-height: 30px;
   max-width: 400px;
   margin-top: 1.5rem;
+}
+
+/* Feature - 2 */
+
+.feature-2 {
+  position: relative;
+  flex-direction: row-reverse;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 70vh;
+  margin-bottom: 15rem;
+}
+
+.feature-text-2-heading span {
+  font-family: Work Sans;
+  font-size: 3rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 60px;
+  background: linear-gradient(180deg, #f948b2 100%, #8758f1 0%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.feature-text-2-heading {
+  text-align: left;
+  color: #0b0223;
+  font-family: Work Sans;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 60px;
+}
+
+.floating-image-2 {
+  position: absolute;
+  transform: translate(-10%, 70%);
+}
+
+.feature-text-2 p {
+  color: #534c64;
+  text-align: left;
+  font-family: Work Sans;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+  max-width: 400px;
+  margin-top: 1.5rem;
+}
+
+.feature-text-2 {
+  width: 60%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 4rem;
 }
