--- a/styles/style.css
+++ b/styles/style.css
@@ -4,10 +4,9 @@
   padding: 0;
   margin: 0;
 }
-
-/* body {
-  border: 2px solid red;
-} */
+a:active {
+  color: #f948b2;
+}
 h2 {
   text-align: center;
   font-family: Work Sans;
@@ -58,6 +57,11 @@ nav {
   display: flex;
   align-items: center;
   width: 50%;
+}
+.logo-container a {
+  text-decoration: none;
+  display: flex;
+  align-items: center;
 }
 .logo-icon {
   width: 86.041px;
@@ -236,9 +240,8 @@ nav {
   flex-shrink: 0;
 }
 .hero-image {
-  height: 100%;
+  /* height: 100%; */
   width: 100%;
-  aspect-ratio: auto;
 }
 
 /* Gamer Section */
@@ -488,6 +491,7 @@ nav {
 .career-section {
   margin-bottom: 7.5rem;
   background: linear-gradient(90deg, #ff42a5 0%, #ff42a5 100%);
+  width: 100%;
 }
 
 .career-container {
@@ -497,9 +501,15 @@ nav {
   justify-content: space-between;
   align-items: center;
 }
-
+.career-image {
+  width: 50%;
+}
+.career-image img {
+  width: 100%;
+}
 .career-text-area {
   padding-left: 16.25rem;
+  width: 50%;
 }
 
 .career-heading {
@@ -523,6 +533,9 @@ nav {
 
   margin-bottom: 2rem;
 }
+/* .career-image {
+  width: 50%;
+} */
 
 .jobs {
   display: flex;
@@ -597,6 +610,8 @@ nav {
   margin-right: 1rem;
 }
 
+/* Footer */
+
 footer {
   background: #0b0223;
   padding: 7.5rem 1rem;
@@ -612,7 +627,11 @@ footer {
   display: flex;
   align-items: center;
 }
-
+.footer-logo-container a {
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
 .footer-container ul {
   display: flex;
   justify-content: center;
