--- a/styles/style.css
+++ b/styles/style.css
@@ -223,9 +223,16 @@ nav {
   text-transform: uppercase;
   text-decoration: none;
 }
-
+.button-primary:hover {
+  color: #f948b2;
+}
 .button-color-1 {
   background: var(--linear, linear-gradient(90deg, #ff42a5 0%, #ff42a5 100%));
+  transition: all 0.3s ease-in-out;
+}
+.button-color-1:hover {
+  background: #fff;
+  box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
 }
 .button-color-2 {
   background: #4ec5f7;
@@ -628,9 +635,11 @@ nav {
   background: #ffffff;
   flex-shrink: 0;
   padding: 10px 20px 10px 10px;
+  border-bottom: 5px solid transparent;
+  transition: border 0.2s ease-in-out;
 }
 .game:hover {
-  border: 1px solid #f948b2;
+  border: 2px solid #f948b2;
 }
 .game img {
   width: 60px;
